Fix all responsive issues on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
 body {
     background: #fff;
 		font-family: 'brandon-grotesque', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: 300;
     color: #333333;
     line-height: 28px;
@@ -122,7 +122,8 @@ h5 {
 }
 
 .button-leweb {
-	background: none repeat scroll 0 0 rgba(22, 182, 234, 0.5);
+	/* background: none repeat scroll 0 0 rgba(22, 182, 234, 0.5); */
+	 background: #008ed6 !important;
     border: 1px solid #fff;
 	color: #fff;
 	border-radius: 0px;
@@ -139,7 +140,8 @@ h5 {
 
 
 .button-leweb:hover {
-	background: #008ed6;
+	/* background: #008ed6; */
+	background: none repeat scroll 0 0 rgba(22, 182, 234, 0.5) !important;
 }
 
 
@@ -253,7 +255,8 @@ section {
 	line-height: 65px;
 	height: 65px;
 	width: 65px;
-	background: rgba(0, 142, 214, 0.7);	
+	/* background: rgba(0, 142, 214, 0.7);	 */
+	background: #008ed6;
 	box-shadow: 0 0 0 1px #008ed6;
 }
 
@@ -430,6 +433,11 @@ section {
 	#about .middle {
 		margin-top: 65px;
 		margin-bottom: 65px;
+	}
+
+	p.column-on-mobile {
+		width: 70%;
+		margin: 0 auto;
 	}
 }
 
